# RustCICD

./: Cargo.toml  tide.Dockerfile
src/: main.rs
