[package]
name = "tide-server"
version = "0.1.0"
authors = ["Hongjian0619 <530004926@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.14.0"
async-std = { version = "1.6.0", features = ["attributes"] }
serde = "1.0.118"
